--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,7 +1,10 @@
-@media (min-width: 535px) and (max-width: 824px) {
+@media (min-width: 100px) and (max-width: 824px) {
+	body{
+		font-family:'Rubik', sans-serif;
+		
+	}
 	nav{
 		background: #382929;
-		font-family: "Lobster", cursive;
 		color: white;
 	}
 	nav ul{
@@ -10,5 +13,16 @@
 	.lista{
 		border-bottom: 1px solid black;
 		text-align: left;
+	}
+	.menu{
+		display: block;
+		color: white;
+		background-color: #382929;
+		padding: 20px;
+		font-size: 30px;
+		cursor: pointer;
+	}
+	.esconder{
+		display: none;
 	}
 }
