--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,7 +1,6 @@
 @media (min-width: 100px) and (max-width: 824px) {
 	body{
-		font-family:'Rubik', sans-serif;
-		
+		font-family: 'Cormorant SC', serif;
 	}
 	nav{
 		background: #382929;
